[package]
name = "megaspeed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
nom = "7.1.1"
color-eyre = "0.6.2"
bytes = "1.3.0"
smallstring = "0.1.2"